alteração na tela de cadastro, criação da tela login e pequenos ajustes

--- a/src/pages/estab-cadastrado/estab-cadastrado.html
+++ b/src/pages/estab-cadastrado/estab-cadastrado.html
@@ -31,4 +31,8 @@
         </ion-row> -->
     </ion-item>
   </ion-list>
+
+  <ion-fab right bottom >
+    <button ion-fab color="light" title="Cadastrar mais estabelecimentos"  (click)="cadastrarMais()" ><ion-icon name="add"></ion-icon></button>
+  </ion-fab>
 </ion-content>
