--- a/src/pages/detalhes/detalhes.html
+++ b/src/pages/detalhes/detalhes.html
@@ -1,20 +1,17 @@
 <ion-header>
-    <ion-navbar>
-        <ion-title>
-            GO VEGAN!
-        </ion-title>
-    </ion-navbar>
+	<ion-navbar>
+		<ion-title>Go Vegan!</ion-title>
+		<ion-buttons end>
+      <button ion-button icon-only color="danger" title="Adicionar aos favoritos">
+        <ion-icon name="ios-heart-outline"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
 
 <ion-content >
   <ion-card>
     <img src="assets/img/vegango.png">
-		<!-- <ion-fab right top>
-			<button ion-fab>
-				<ion-icon name="pin"></ion-icon>
-			</button>
-		</ion-fab> -->
-
 		
 		<ion-item>
 			<h2>GO VEGAN!</h2> 
@@ -26,7 +23,7 @@
 		</ion-item>
 		
 		<ion-item>
-			<ion-icon name="ios-heart-outline"  item-left color="danger"></ion-icon>	
+			<!-- <ion-icon name="ios-heart-outline"  item-left color="danger"></ion-icon>	 -->
 			<span item-left>18 min</span>
 			<span item-left>(2.6 mi)</span>
 			<button ion-button icon-left clear item-end>
