--- a/src/pages/instrucao-cadastro/instrucao-cadastro.html
+++ b/src/pages/instrucao-cadastro/instrucao-cadastro.html
@@ -15,12 +15,12 @@
 
 <ion-content padding>
     <h1>Olá!</h1>
-    <h5>Para ser parceiro, você deve concordar com o termo abaixo:</h5>
+    <h5>Para ser parceiro, você deve efetuar um cadastro:</h5>
 
-    <ion-item>
+    <!-- <ion-item>
         <ion-label>Tenho CNPJ ativo</ion-label>
         <ion-checkbox color="secondary" checked="false"></ion-checkbox>
-    </ion-item>
+    </ion-item> -->
 
     <button ion-button color="light" round (click)="cadastrar()">Próximo passo</button>
    
