--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,7 +29,7 @@
     </ion-list>
     
     <div padding (click)="entrar()">
-        <button>Entrar</button>
+        <button ion-button >Entrar</button>
     </div>
 
 </ion-content>
