--- a/src/pages/estab-cadastrado/estab-cadastrado.html
+++ b/src/pages/estab-cadastrado/estab-cadastrado.html
@@ -33,18 +33,7 @@
 
      </ion-item-sliding>
    </ion-list>
-  <!-- <ion-list  (click)="detalhe()">
-    <ion-item>
-      <ion-thumbnail item-start>
-        <img src="assets/img/vegango.png">
-      </ion-thumbnail>
-      <h2>GO VEGAN!</h2>
-      <p>Vegano, Restaurante</p>
-      <ion-icon name="ios-arrow-forward" item-end></ion-icon>
-
-    </ion-item>
-  </ion-list> -->
-
+   <button  ion-button full block (click)="signOut()">Sair</button>
   <ion-fab right bottom >
     <button ion-fab color="light" title="Cadastrar mais estabelecimentos"  (click)="newEstabelecimento()" ><ion-icon name="add"></ion-icon></button>
   </ion-fab>
