--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,15 +1,9 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Login</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>
+      Criar nova conta
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
@@ -35,13 +29,9 @@
 
     </ion-list>
 
-    <button ion-button block color="primary" [disabled]="!form.form.valid" (click)="signIn()">
-      Entrar
+    <button ion-button block color="primary" [disabled]="!form.form.valid" (click)="createAccount()">
+      Criar conta
     </button>
   </form>
-
-    <button ion-button  clear block (click)="resetPassword()">Esqueci minha senha</button>
-    
-    <button ion-button  clear block  (click)="criarConta()">Criar conta</button>
 
 </ion-content>
